force-app/main/default/objects/User_Tracking__c/fields/Call_Time_in_Sec__c.field-meta.xml
<CustomField>
    <fullName>Call_Time_in_Sec__c</fullName>
    <label>Call Time in Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>