force-app/main/default/objects/User_Tracking__c/fields/Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Date__c</fullName>
    <formula>DATEVALUE(Checkin_Datetime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check in Date</label>
    <type>Date</type>
</CustomField>