force-app/main/default/objects/User_Tracking__c/fields/Checkin_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Datetime__c</fullName>
    <label>Checkin Datetime</label>
    <type>DateTime</type>
</CustomField>