force-app/main/default/objects/User_Tracking__c/fields/Checkout_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Datetime__c</fullName>
    <label>Checkout Datetime</label>
    <type>DateTime</type>
</CustomField>