force-app/main/default/objects/User_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checkin_Datetime__c</columns>
    <columns>Checkout_Datetime__c</columns>
    <columns>Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>